--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-testing-sweeeeet",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/Ventilador/angularTestingSweeeeet/issues"
   },
-  "homepage": "https://github.com/Ventilador/angularTestingSweeeeet#readme"
+  "homepage": "https://github.com/Ventilador/angularTestingSweeeeet#readme",
+  "devDependencies": {
+    "jshint": "^2.9.4"
+  },
+  "dependencies": {
+    "angular": "^1.6.2"
+  }
 }
