--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jshint": "^2.9.4"
   },
   "dependencies": {
-    "angular": "^1.6.2"
+    "angular": "^1.6.2",
+    "jquery": "^3.1.1"
   }
 }
